Prevented table from overflowing left

--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -49,4 +49,5 @@ td {
 .matrix-container {
   margin-top: 15px;
   margin-bottom: 15px;
+  max-width: 100%;
 }
